# LocalCodeAI

./: .gitignore  README.md  app.py  config.py  main.py  parser.py  pyproject.toml
api/: __init__.py  app.py
core/: __init__.py
core/embeddings/: __init__.py  local_ebeddings.py
core/llm/: local_llm.py
core/parser/: __init__.py  docs.py  python.py
core/rag/: __init__.py  rag_core.py
core/vector_db/: __init__.py  chroma_manager.py
database_manager/: rag_store.py  types.py
