[project]
name = "rag-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "chardet>=5.2.0",
    "chromadb>=1.0.10",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "loguru>=0.7.3",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]
